TAG: gxdimageload-4-4-2-3
DATE: 02/13/2012
STAFF: lec
CHANGES: 
1) TR10978/added x,y,width,height to IMG_ImagePane

TAG: gxdimageload-4-4-2-2
DATE: 11/22/2011
STAFF: lec
CHANGES: 
1) added -f to *csh

TAG: gxdimageload-4-4-2-1
DATE: 10/11/2011
STAFF: lec
CHANGES: 
1) tr10872*

TAG: gxdimageload-4-4-1-9
TAG: gxdimageload-4-4-1-8
TAG: gxdimageload-4-4-1-7
TAG: gxdimageload-4-4-1-6
TAG: gxdimageload-4-4-1-5
TAG: gxdimageload-4-4-1-4
DATE: 07/06/2011
STAFF: lec
CHANGES: 
1) tr10629imageAssoc.py: check creation_date on query that gets the images
   to exclude the original set of images that were loaded

TAG: gxdimageload-4-4-1-3
DATE: 03/29/2011
STAFF: dbm
CHANGES: 
1) tr10537imageAssoc.py: check creation_date on query that gets the images
   to exclude the original set of images that were loaded

TAG: gxdimageload-4-4-1-2
DATE: 02/22/2011
STAFF: dbm
CHANGES: 
1) gxdimageload.py: changed image class key to 83
2) Added tr10537pixload.sh, tr10537prepFullsize.py, tr10537prepThumbnail.py
   and tr10537imageAssoc.py to get the images loaded.

TAG: gxdimageload-4-4-1-1
DATE: 11/24/2010
STAFF: lec
CHANGES: 
1) gxdimageload.py; added image class key to IMG_Image

TAG: gxdimageload-4-3-5-1
DATE: 08/02/2010
STAFF: dbm
CHANGES: 
1) Added tr9695pixload.sh, tr9695prepFullsize.py, tr9695prepThumbnail.py
   and tr9695imageAssoc.py to get the images loaded.

TAG: gxdimageload-4-3-4-1
DATE: 05/12/2010
STAFF: lec
CHANGES:
1) TR10159/Loftus images J:157352
2) TR10161/Blackshaw2 J:157819

TAG: gxdimageload-4-2-0-6
TAG: gxdimageload-4-2-0-5
TAG: gxdimageload-4-2-0-4
TAG: gxdimageload-4-2-0-3
DATE: 01/21/2009
DATE: 01/20/2009
DATE: 01/15/2009
STAFF: lec
CHANGES:
1) TR9458/J:141291

TAG: gxdimageload-4-2-0-2
TAG: gxdimageload-4-2-0-1
DATE: 01/08/2009
DATE: 01/07/2009
STAFF: lec
CHANGES:
1) TR9417/J:139177 GXD load

TAG: gxdimageload-4-0-2-5
TAG: gxdimageload-4-0-2-4
TAG: gxdimageload-4-0-2-3
TAG: gxdimageload-4-0-2-2
TAG: gxdimageload-4-0-2-1
DATE: 05/21/2008
STAFF: lec
CHANGES: